--- a/Products/Kaspersky.html
+++ b/Products/Kaspersky.html
@@ -243,38 +243,38 @@
                         <div class="m-menu-content">
                           <ul class="col-sm-3">
                             <li class="dropdown-header">Communication</li>
-                            <li><a href="#">Dell technologies</a></li>
-                            <li><a href="#">Hewlett Packard Enterprise</a></li>
-                            <li><a href="#">Solar winds</a></li>
-                            <li><a href="#">NetSheild</a></li>
-                            <li><a href="#">Huawei</a></li>
-                          </ul>
+                            <li><a class="popup-link" data-video-id="idHPbgMpdKo" href="#">Dell technologies</a></li>
+                            <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
+                            <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                            <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
+                            <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
+                        </ul>
                           <ul class="col-sm-3">
                             <li class="dropdown-header">Cloud</li>
-                            <li><a href="#">SYNAQ</a></li>
-                            <li><a href="#">Adobe</a></li>
-                            <li><a href="#">Microsoft Office 365</a></li>
-                            <li><a href="#">Huawei</a></li>
-                          </ul>
+                            <li><a class="popup-link" data-video-id="4kuznHDHb5o" href="#">SYNAQ</a></li>
+                            <li><a class="popup-link" data-video-id="b7ZC01afWPw" href="#">Adobe</a></li>
+                            <li><a class="popup-link" data-video-id="2W0T2qGZ9Dc" href="#">Microsoft Office 365</a></li>
+                            <li><a class="popup-link" data-video-id="UdQQNiQUzbE" href="#">Huawei</a></li>
+                        </ul>
                           <ul class="col-sm-3">
                             <li class="dropdown-header">Security</li>
-                            <li>
-                              <a href="Kaspersky.html">Kaspersky</a>
-                            </li>
+                            <li><a href="Kaspersky.html">Kaspersky</a></li>
                             <li><a href="Sophos.html">Sophos</a></li>
-                            <li><a href="#">CheckPoint</a></li>
-                            <li><a href="#">VeeAm</a></li>
-                            <li><a href="#">Huawei</a></li>
-                          </ul>
+                            <li><a class="popup-link" data-video-id="O74W9BB0gGI" href="#">CheckPoint</a></li>
+                            <li><a href="veeam.html">Veeam</a></li>
+                            <li><a class="popup-link" data-video-id="l47aHiyRXqI" href="#">Huawei</a></li>
+                        </ul>
                           <ul class="col-sm-3">
                             <li class="dropdown-header">Networking</li>
-                            <li><a href="#">Sophos</a></li>
-                            <li><a href="#">Cisco</a></li>
-                            <li><a href="#">NetSheild</a></li>
-                            <li><a href="#">Solar winds</a></li>
-                            <li><a href="#">Huawei</a></li>
-                            <li><a href="#">Hewlett Packard Enterprise</a></li>
-                          </ul>
+                            <li><a href="Sophos.html">Sophos</a></li>
+                            <li><a class="popup-link" data-video-id="bHOpHg4WwTMK" href="#">Cisco</a></li>
+                            <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
+                            <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                            <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
+                            <li><a class="popup-link" data-video-id="MnAl5acI2Nk" href="#">Veeam</a></li>
+                            <li><a class="popup-link" data-video-id="hpHkLLmkD_o" href="#">Manage Engine</a></li>
+                            <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
+                        </ul>
                         </div>
                       </li>
                     </ul>
@@ -294,7 +294,7 @@
                     <section class="prod-intro">
                       <img
                         id="prod-Illustration"
-                        src="../img/karspersky product Icons/Asset_1.png"
+                        src="../img/karspersky_Product_Icons/Asset_1.png"
                         alt="Product Pages Illustration"
                       />
                       <h1>Product Page</h1>
@@ -311,7 +311,7 @@
                         <img
                           height="100px"
                           width="100px"
-                          src="../Img/karspersky product Icons/k_EDR_Expert_black_icon.png"
+                          src="../Img/karspersky_Product_Icons/k_EDR_Expert_black_icon.png"
                           alt="Kaspersky EDR Expert"
                         />
                         <h2>Kaspersky EDR Expert</h2>
@@ -342,7 +342,7 @@
                       </div>
                       <div class="prod-card">
                         <img
-                          src="../Img/karspersky product Icons/Kaspersky Next_.svg"
+                          src="../Img/karspersky_Product_Icons/Kaspersky_Next_.svg"
                           alt="Kaspersky Next"
                         />
                         <h2>Kaspersky NEXT</h2>
@@ -374,7 +374,7 @@
                       </div>
                       <div class="prod-card">
                         <img
-                          src="../Img/karspersky product Icons/EDR Optimum_black.svg"
+                          src="../Img/karspersky_Product_Icons/EDR_Optimum_black.svg"
                           alt="Kaspersky Next EDR Optimum"
                         />
                         <h2>Kaspersky Next EDR Optimum</h2>
@@ -406,7 +406,7 @@
                         <img
                           height="100px"
                           width="100px"
-                          src="../Img/karspersky product Icons/k_Extended_Detection_and_Response_black_icon.svg"
+                          src="../Img/karspersky_Product_Icons/k_Extended_Detection_and_Response_black_icon.svg"
                           alt="XDR"
                         />
                         <h2>Kaspersky XDR</h2>
@@ -437,8 +437,8 @@
 
                       <div class="prod-card">
                         <img
-                          src="../Img/karspersky product Icons/Kaspersky Security for Microsoft Office 365.png"
-                          alt="Next EDR Optimum"
+                          src="../Img/karspersky_Product_Icons/Kaspersky_Security for_Microsoft_Office_365.png"
+                          alt="Kaspersky Security for Microsoft Office 365"
                         />
                         <h2>Kaspersky Security for Microsoft Office 365</h2>
                         <p>
@@ -464,7 +464,7 @@
                       </div>
                       <div class="prod-card">
                         <img
-                          src="../Img/karspersky product Icons/Endpoint Security for Business.png"
+                          src="../Img/karspersky_Product_Icons/Endpoint_Security_for_Business.png"
                           alt="KES for Business"
                         />
                         <h2>Kaspersky Endpoint Security For Business</h2>
@@ -492,7 +492,7 @@
                       </div>
                       <div class="prod-card">
                         <img
-                          src="../Img/karspersky product Icons/Kaspersky_Endpoint_Security_Cloud.png"
+                          src="../Img/karspersky_Product_Icons/Kaspersky_Endpoint_Security_Cloud.png"
                           alt="KES Cloud"
                         />
                         <h2>Kaspersky Endpoint Security cloud</h2>
@@ -518,7 +518,7 @@
                       </div>
                       <div class="prod-card">
                         <img
-                          src="../Img/karspersky product Icons/Kaspersky_Embedded_Systems_Security.png"
+                          src="../Img/karspersky_Product_Icons/Kaspersky_Embedded_Systems_Security.png"
                           alt="Embedded systems Security"
                         />
                         <h2>Kaspersky Embedded Systems Security</h2>
@@ -543,7 +543,7 @@
 
                       <div class="prod-card">
                         <img
-                          src="../Img/karspersky product Icons/Kaspersky Industrial Cybersecurity.png"
+                          src="../img/karspersky_Product_Icons/Kaspersky_Industrial_Cybersecurity.png"
                           alt="Industrial Cybersecurity"
                         />
                         <h2>Kaspersky Industrial cybersecurity</h2>
@@ -571,7 +571,7 @@
                         <img
                           height="35%"
                           width="35%"
-                          src="../Img/karspersky product Icons/k_Container_Security_black_icon.svg"
+                          src="../Img/karspersky_Product_Icons/k_Container_Security_black_icon.svg"
                           alt="Container Security"
                         />
                         <h2>Kaspersky Container Security</h2>
@@ -594,7 +594,7 @@
                       </div>
                       <div class="prod-card">
                         <img
-                          src="../Img/karspersky product Icons/Kaspersky Hybrid Cloud Security.png"
+                          src="../Img/karspersky_Product_Icons/Kaspersky_Hybrid_Cloud_Security.png"
                           alt="hybrid cloud security"
                         />
                         <h2>Kaspersky Hybrid cloud Security</h2>
@@ -618,7 +618,7 @@
                       </div>
                       <div class="prod-card">
                         <img
-                          src="../Img/karspersky product Icons/Sandbox.png"
+                          src="../img/karspersky_Product_Icons/Sandbox.png"
                           alt="sandbox"
                         />
                         <h2>Kaspersky Sandbox</h2>
@@ -771,7 +771,7 @@
             <div class="copyright-section">
               <div class="container clearfix">
                   <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
-                      rel="noopener" target="_blank" href="https://zukamime03.github.io">ZUKAMIME </a>and<a href="#" rel="noopener" target="_blank"> CRYPTO</a></span>
+                      rel="noopener" target="_blank" href="https://zukamime03.github.io"> LAMPROS Developments</a></span>
 
                   <ul class="list-inline pull-right">
                       <li><a href="../index.html">Home</a></li>
