--- a/services.html
+++ b/services.html
@@ -174,7 +174,7 @@
                 <div class="col-sm-6 col-md-3">
                   <div class="promo-block-wrapper clearfix">
                     <div class="promo-icon">
-                      <img title="communication mini icon" src="./img/com-mini.jpg" class="mini-icon">
+                      <img title="communication mini icon" src="./img/com-mini.png" class="mini-icon">
                     </div>
                     <div class="promo-content">
                       <h3>Communication</h3>
@@ -449,210 +449,7 @@
           </section>
           <!-- .about-text-->
 
-             <!--Begining Products Sertion-->
-             <section id="Vendors">
-                <div class="vendor-container">
-                    <div class="header">
-                        <div class="category">NETWORKS</div>
-                        <div class="category">DATA CENTRE</div>
-                        <div class="category">SECURITY</div>
-                        <div class="category">CLOUD</div>
-                    </div>
-                    <div class="vendor-content">
-                        <div class="column">
-                            <div class="img-container">
-                                <img class="vendor-logo" src="./img/Vendors/sophos-logo-blue-rgb.png" alt="Sophos Platinum Partner">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Sophos Switches</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/Cisco-logo.png" alt="Cisco Partner">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Cisco Routers</li>
-                                    <li>Cisco Switches</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/veeam-logo.png" alt="Veeam">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Veeam Data Platform</li>
-                                    <li>Veeam Data Cloud</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/manageengine-logo.png" alt="ManageEngine">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Identity and access management</li>
-                                     <li> Unified service management</li>
-                                      <li> endpoint management and security</li>
-                                     <li>operations management</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/solarwinds-logo.png" alt="Solarwinds">
-                                <div class="overlay">
-                                  <ul>
-                                    <li> Network Management</li>
-                                    <li>Database Management</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/netsheild-logo.png" alt="Netshield">
-                                <div class="overlay">Netshield</div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/Huawei-Logo1-white.png" alt="Huawei">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Huawei Routers</li>
-                                    <li>Huawei Switches</li>
-                                  </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="img-container">
-                                <img src="./img/Vendors/dell-tech-Logo.png" alt="Dell Technologies Authorized Partner">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Servers</li>
-                                    <li>Workstations</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/hpe-logo.png" alt="Hewlett Packard Enterprise">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Servers</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/solarwinds-logo.png" alt="Solarwinds">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Systems Management</li>
-                                    <li>Monitoring and Observability</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                              <img src="./img/Vendors/netsheild-logo.png" alt="Netshield">
-                              <div class="overlay">
-                                <ul>
-                                  <li><li>Datacenter in a box</li></li>
-                                </ul>
-                              </div>
-                          </div>
-                          <div class="img-container">
-                            <img src="./img/Vendors/Huawei-Logo1-white.png" alt="Huawei">
-                            <div class="overlay">
-                              <ul>
-                                <li>Hauwei Servers</li>
-                              </ul>
-                            </div>
-                        </div>
-                        </div>
-                        <div class="column">
-                            <div class="img-container">
-                                <img src="./img/Vendors/Asset_1.png" alt="Kaspersky Platinum Partner">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Kaspersky Endpoint Security </li>
-                                    <li>Kaspersky Endpoint detection and response</li>
-                                    <li>Kaspersky Security for Microsoft 365</li>
-                                    <li>Kaspersky Industrial Cybersecurity</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/sophos-logo-blue-rgb.png" alt="Sophos Platinum Partner">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Sophos Endpoint </li>
-                                    <li>Sophos Managed Detection and Response</li>
-                                    <li>Sophos Firewall</li>
-                                    <li>Sophos EDR</li>
-                                    <li>Sophos Mobile</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/checkpoint-logo.png" alt="Check Point">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Harmony Endpoint </li>
-                                    <li>Harmony Browse</li>
-                                    <li>Harmony Email</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/veeam-logo.png" alt="Veeam">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Veeam Data Security</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/Huawei-Logo1-white.png" alt="Huawei">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Huawei Firewalls</li>
-                                  </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="img-container">
-                                <img src="./img/Vendors/synaq-logo.png" alt="Synaq">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Synaq Securemail</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/Adobe-Logo.png" alt="Adobe">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Adobe Creative Cloud</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/Microsoft-partner-logo.png" alt="Microsoft Partner">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Microsoft Office 365</li>
-                                  </ul>
-                                </div>
-                            </div>
-                            <div class="img-container">
-                                <img src="./img/Vendors/Huawei-Logo1-white.png" alt="Huawei">
-                                <div class="overlay">
-                                  <ul>
-                                    <li>Huawei Cloud</li>
-                                  </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-          </section>
-          <!--end of Vendors-->
+
 
           <div class="popup-overlay" id="popup-overlay">
             <div class="popup-content">
