--- a/Products/Veeam.html
+++ b/Products/Veeam.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ikasi Solution | Sophos Products</title>
+    <title>Ikasi Solution | Veeam Products</title>
     <!-- web-fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,500" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -70,38 +70,40 @@
                       <ul class="dropdown-menu">
                           <li>
                               <div class="m-menu-content">
+                                <ul class="col-sm-3">
+                                    <li class="dropdown-header">Communication</li>
+                                    <li><a class="popup-link" data-video-id="idHPbgMpdKo" href="#">Dell technologies</a></li>
+                                    <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
+                                    <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                                    <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
+                                    <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
+                                </ul>
                                   <ul class="col-sm-3">
-                                      <li class="dropdown-header">Communication</li>
-                                      <li><a class="popup-link" data-video-id="gRNPzs25pSY" href="#">Dell technologies</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Hewlett Packard Enterprise</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">NetSheild</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
-                                  </ul>
+                                    <li class="dropdown-header">Cloud</li>
+                                    <li><a class="popup-link" data-video-id="4kuznHDHb5o" href="#">SYNAQ</a></li>
+                                    <li><a class="popup-link" data-video-id="b7ZC01afWPw" href="#">Adobe</a></li>
+                                    <li><a class="popup-link" data-video-id="2W0T2qGZ9Dc" href="#">Microsoft Office 365</a></li>
+                                    <li><a class="popup-link" data-video-id="UdQQNiQUzbE" href="#">Huawei</a></li>
+                                </ul>
                                   <ul class="col-sm-3">
-                                      <li class="dropdown-header">Cloud</li>
-                                      <li><a class="popup-link" data-video-id="" href="#">SYNAQ</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Adobe</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Microsoft Office 365</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
-                                  </ul>
+                                    <li class="dropdown-header">Security</li>
+                                    <li><a href="Kaspersky.html">Kaspersky</a></li>
+                                    <li><a href="Sophos.html">Sophos</a></li>
+                                    <li><a class="popup-link" data-video-id="O74W9BB0gGI" href="#">CheckPoint</a></li>
+                                    <li><a href="veeam.html">Veeam</a></li>
+                                    <li><a class="popup-link" data-video-id="l47aHiyRXqI" href="#">Huawei</a></li>
+                                </ul>
                                   <ul class="col-sm-3">
-                                      <li class="dropdown-header">Security</li>
-                                      <li><a href="./Kaspersky.html">Kaspersky</a></li>
-                                      <li><a href="./Sophos.html">Sophos</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">CheckPoint</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Veeam</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
-                                  </ul>
-                                  <ul class="col-sm-3">
-                                      <li class="dropdown-header">Networking</li>
-                                      <li><a href="./Sophos.html">Sophos</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Cisco</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">NetSheild</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
-                                      <li><a class="popup-link" data-video-id="" href="#">Hewlett Packard Enterprise</a></li>
-                                  </ul>
+                                    <li class="dropdown-header">Networking</li>
+                                    <li><a href="Sophos.html">Sophos</a></li>
+                                    <li><a class="popup-link" data-video-id="bHOpHg4WwTMK" href="#">Cisco</a></li>
+                                    <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
+                                    <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                                    <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
+                                    <li><a class="popup-link" data-video-id="MnAl5acI2Nk" href="#">Veeam</a></li>
+                                    <li><a class="popup-link" data-video-id="hpHkLLmkD_o" href="#">Manage Engine</a></li>
+                                    <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
+                                </ul>
                               </div>
                           </li>
                       </ul>
@@ -132,7 +134,7 @@
     </div>
     
     <a href="../contact.html" class="contact-us-icon">
-      <i class='fa fa-paper-plane'></i>
+      <i class='fa fa-comments'></i>
     </a>
     <footer class="footer">
         <!-- Footer Widget Section -->
