--- a/Products/Sophos.html
+++ b/Products/Sophos.html
@@ -277,7 +277,7 @@
 </div>
 
 <a href="../contact.html" class="contact-us-icon">
-  <i class='fa fa-paper-plane'></i>
+  <i class='fa fa-comments'></i>
 </a>
 <footer class="footer">
     <!-- Footer Widget Section -->
