--- a/about.html
+++ b/about.html
@@ -63,47 +63,50 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="Blog.html">News</a></li>
-                <li class="dropdown m-menu-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Vendors
+                <li class="dropdown m-menu-fw"><a href="#" data-toggle="dropdown"
+                    class="dropdown-toggle">Vendors
                     <span><i class="fa fa-angle-down"></i></span></a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <div class="m-menu-content">
-                                <ul class="col-sm-3">
-                                    <li class="dropdown-header">Communication</li>
-                                    <li><a class="popup-link" data-video-id="" href="#">Dell technologies</a></li>
-                                    <li><a href="#">Hewlett Packard Enterprise</a></li>
-                                    <li><a href="#">Solar winds</a></li>
-                                    <li><a href="#">NetSheild</a></li>
-                                    <li><a href="#">Huawei</a></li>
-                                </ul>
-                                <ul class="col-sm-3">
-                                    <li class="dropdown-header">Cloud</li>
-                                    <li><a href="#">SYNAQ</a></li>
-                                    <li><a href="#">Adobe</a></li>
-                                    <li><a href="#">Microsoft Office 365</a></li>
-                                    <li><a href="#">Huawei</a></li>
-                                </ul>
-                                <ul class="col-sm-3">
-                                    <li class="dropdown-header">Security</li>
-                                    <li><a href="./Products/Kaspersky.html">Kaspersky</a></li>
-                                    <li><a href="#">Sophos</a></li>
-                                    <li><a href="#">CheckPoint</a></li>
-                                    <li><a href="#">Veeam</a></li>
-                                    <li><a href="#">Huawei</a></li>
-                                </ul>
-                                <ul class="col-sm-3">
-                                    <li class="dropdown-header">Networking</li>
-                                    <li><a href="#">Sophos</a></li>
-                                    <li><a href="#">Cisco</a></li>
-                                    <li><a href="#">NetSheild</a></li>
-                                    <li><a href="#">Solar winds</a></li>
-                                    <li><a href="#">Huawei</a></li>
-                                    <li><a href="#">Hewlett Packard Enterprise</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
+                <ul class="dropdown-menu">
+                    <li>
+                        <div class="m-menu-content">
+                            <ul class="col-sm-3">
+                                <li class="dropdown-header">Communication</li>
+                                <li><a class="popup-link" data-video-id="idHPbgMpdKo" href="#">Dell technologies</a></li>
+                                <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
+                                <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                                <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
+                                <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
+                            </ul>
+                            <ul class="col-sm-3">
+                                <li class="dropdown-header">Cloud</li>
+                                <li><a class="popup-link" data-video-id="4kuznHDHb5o" href="#">SYNAQ</a></li>
+                                <li><a class="popup-link" data-video-id="b7ZC01afWPw" href="#">Adobe</a></li>
+                                <li><a class="popup-link" data-video-id="2W0T2qGZ9Dc" href="#">Microsoft Office 365</a></li>
+                                <li><a class="popup-link" data-video-id="UdQQNiQUzbE" href="#">Huawei</a></li>
+                            </ul>
+                            <ul class="col-sm-3">
+                                <li class="dropdown-header">Security</li>
+                                <li><a href="./Products/Kaspersky.html">Kaspersky</a></li>
+                                <li><a href="./Products/Sophos.html">Sophos</a></li>
+                                <li><a class="popup-link" data-video-id="O74W9BB0gGI" href="#">CheckPoint</a></li>
+                                <li><a href="./Products/veeam.html">Veeam</a></li>
+                                <li><a class="popup-link" data-video-id="l47aHiyRXqI" href="#">Huawei</a></li>
+                            </ul>
+                            <ul class="col-sm-3">
+                                <li class="dropdown-header">Networking</li>
+                                <li><a href="./Products/Sophos.html">Sophos</a></li>
+                                <li><a class="popup-link" data-video-id="bHOpHg4WwTMK" href="#">Cisco</a></li>
+                                <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
+                                <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                                <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
+                                <li><a class="popup-link" data-video-id="MnAl5acI2Nk" href="#">Veeam</a></li>
+                                <li><a class="popup-link" data-video-id="hpHkLLmkD_o" href="#">Manage Engine</a></li>
+                                <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </li>
             </ul>
 
         </div>
@@ -263,9 +266,9 @@
    </section>
 -->
 
-<div class="popup-overlay" id="popup-overlay">
-    <div class="popup-content">
-      <span class="close-btn" id="close-btn">&times;</span>
+<div class="popup-overlay1" id="popup-overlay1">
+    <div class="popup-content1">
+      <span class="close-btn1" id="close-btn1">&times;</span>
       <!-- Embedded YouTube video -->
       <iframe id="w-video" src="" frameborder="0" allowfullscreen></iframe>
     </div>
