--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
+                            
                             <a class="navbar-brand" href="index.html"><img id="pic-logo" src="./img/logo2-nobg.png"
                                     alt="Ikasi-Solutions-Logo"></a>
                         </div>
@@ -114,7 +115,7 @@
                 </nav>
                 <!-- .nav -->
 
-                <div id="Ikasi-carousel" class="carousel slide hero-slide hidden-xs" data-ride="carousel">
+                <div id="Ikasi-carousel" class="carousel slide hero-slide" data-ride="carousel">
                    
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
